--- a/app_meteo/src/assets/css/Main.css
+++ b/app_meteo/src/assets/css/Main.css
@@ -5,8 +5,8 @@ justify-content: center;
 margin-top: 5vh;
 align-items: center;
 background-color: rgba(255, 255, 255, 0.575);
-width:100%;
-height: 10vh;
+width:70vw;
+height: 70px;
 border-radius: 100px;
 padding: 20px 0
 
